--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="container">
             <h2>Hi, I'm <span>Javed Khan</span></h2>
-            <p>Aspiring Big Data & AI Developer | C-DAC Kharghar, Mumbai</p>
+            <p>Aspiring Big Data & AI Developer | C-DAC Kharghar new, Mumbai</p>
             <a href="#contact" class="btn">Hire Me</a>
         </div>
     </header>
